--- a/model_image/Dockerfile
+++ b/model_image/Dockerfile
@@ -1,9 +1,9 @@
-FROM public.ecr.aws/lambda/python:3.13
+FROM public.ecr.aws/lambda/python:3.12
 
 #req
 COPY requirements_model.txt ${LAMBDA_TASK_ROOT}
 
 RUN pip install -r requirements_model.txt
 COPY src/* ${LAMBDA_TASK_ROOT}
-
-CMD [ "main.handler" ]
+COPY models/* ${LAMBDA_TASK_ROOT}
+CMD [ "lambda_function.lambda_handler" ]
