--- a/model_image/Dockerfile
+++ b/model_image/Dockerfile
@@ -1,9 +1,60 @@
-FROM public.ecr.aws/lambda/python:3.12
+ARG FUNCTION_DIR="/function"
 
-#req
-COPY requirements_model.txt ${LAMBDA_TASK_ROOT}
+FROM python:3.12 AS build-image
 
-RUN pip install -r requirements_model.txt
-COPY src/* ${LAMBDA_TASK_ROOT}
-COPY models/* ${LAMBDA_TASK_ROOT}
-CMD [ "lambda_function.lambda_handler" ]
+# Include global arg in this stage of the build
+ARG FUNCTION_DIR
+
+# Install system dependencies required for OpenCV, LightGBM and other packages
+RUN apt-get update && apt-get install -y \
+    libgl1-mesa-glx \
+    libglib2.0-0 \
+    libsm6 \
+    libxext6 \
+    libxrender-dev \
+    libgomp1 \
+    && rm -rf /var/lib/apt/lists/*
+
+# Create function directory
+RUN mkdir -p ${FUNCTION_DIR}
+
+# Copy requirements.txt first
+COPY requirements_model.txt ${FUNCTION_DIR}/
+
+# Install the function's dependencies
+RUN pip install setuptools wheel
+
+RUN pip install \
+    --target ${FUNCTION_DIR} \
+        awslambdaric \
+        -r ${FUNCTION_DIR}/requirements_model.txt
+
+# Copy function code
+COPY . ${FUNCTION_DIR}/
+
+# Use a slim version of the base Python image to reduce the final image size
+FROM python:3.12-slim
+
+# Include global arg in this stage of the build
+ARG FUNCTION_DIR
+
+# Install runtime system dependencies
+RUN apt-get update && apt-get install -y \
+    libgl1-mesa-glx \
+    libglib2.0-0 \
+    libsm6 \
+    libxext6 \
+    libxrender-dev \
+    libgomp1 \
+    && rm -rf /var/lib/apt/lists/*
+
+# Set working directory to function root directory
+WORKDIR ${FUNCTION_DIR}
+
+# Copy in the built dependencies
+COPY --from=build-image ${FUNCTION_DIR} ${FUNCTION_DIR}
+
+# Set runtime interface client as default command for the container runtime
+ENTRYPOINT [ "/usr/local/bin/python", "-m", "awslambdaric" ]
+# Pass the name of the function handler as an argument to the runtime
+CMD [ "src.lambda_function.lambda_handler" ]
