--- a/.github/workflows/deploy-lambda.yml
+++ b/.github/workflows/deploy-lambda.yml
@@ -94,7 +94,7 @@ jobs:
 
       - name: Deploy Lambda using container image
         run: |
-          aws lambda update-function-code --function-name model-image-lambda --image-uri 204597968057.dkr.ecr.us-east-1.amazonaws.com/yotam-tree-image:latest
+          aws lambda update-function-code --function-name arn:aws:lambda:us-east-1:204597968057:function:yotam-finel-model --image-uri 204597968057.dkr.ecr.us-east-1.amazonaws.com/yotam-tree-image:latest
 
       - name: Notify via SNS
         run: |
