--- a/.github/workflows/deploy-lambda.yml
+++ b/.github/workflows/deploy-lambda.yml
@@ -17,7 +17,7 @@ jobs:
 
       - name: Create Zip file
         run: |
-          cd src/final-activator
+          cd src/final_activator
           zip -r code.zip .
 
       - name: Configure AWS Credentials
@@ -29,7 +29,7 @@ jobs:
 
       - name: AWS CLI upload
         run: |
-          aws lambda update-function-code --function-name arn:aws:lambda:us-east-1:204597968057:function:yotam-finel-activator --zip-file fileb://src/final-activator/code.zip
+          aws lambda update-function-code --function-name arn:aws:lambda:us-east-1:204597968057:function:yotam-finel-activator --zip-file fileb://src/final_activator/code.zip
 
       - name: Notify via SNS
         run: |
