--- a/.github/workflows/deploy-pre-process.yml
+++ b/.github/workflows/deploy-pre-process.yml
@@ -25,6 +25,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements_pre.txt
+          pip install pytest
 
       - name: Run test_pre_process.py
         run: pytest tests/test_pre_process.py
