--- a/.github/workflows/deploy-pre-process.yml
+++ b/.github/workflows/deploy-pre-process.yml
@@ -50,7 +50,7 @@ jobs:
         run: echo "${{ secrets.DOCKERHUB_PASSWORD }}" | docker login -u "${{ secrets.DOCKERHUB_USERNAME }}" --password-stdin
 
       - name: Build Docker Image
-        run: docker build -t yotam433/finel_project_preprocess:latest .
+        run: docker build -t yotam433/finel_project_preprocess:latest -f docker/Dockerfile .
 
       - name: Push Docker Image
         run: docker push yotam433/finel_project_preprocess:latest
